--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/image-slider-1.jpg" alt="image d'un ours en peluche" class="d-block w-100" />
+            <img src="img/image-caroussel-1.jpg" alt="image d'un ours en peluche" class="d-block w-100" />
             <div class="carousel-caption">
               <h5>Un large choix d'ours en peluche</h5>
               <p>Vous pourrez trouver absolutment tout type d'ours en peluche, pour les collectionneurs ou les enfants</p>
@@ -71,7 +71,7 @@
           </div>
           
           <div class="carousel-item">
-            <img src="img/image-slider-2.jpg" alt="image d'un ours en peluche" class="d-block w-100" />
+            <img src="img/image-caroussel-2.jpg" alt="image d'un ours en peluche" class="d-block w-100" />
             <div class="carousel-caption">
                 <h5>Des ours en peluche modifiables</h5>
                 <p>Du choix de couleur ou de matière, nous offrons de nombreuses options et variantes de nos ours en peluche</p>
@@ -79,7 +79,7 @@
             </div>
 
           <div class="carousel-item">
-            <img src="img/image-slider-3.jpg" alt="image d'un ours en peluche " class="d-block w-100" />
+            <img src="img/image-caroussel-3.jpg" alt="image d'un ours en peluche " class="d-block w-100" />
             <div class="carousel-caption">
                 <h5>Des services à votre écoute</h5>
                 <p>Nous équipes de professionnel seront aptent à vous conseiller sur vos choix d'ours en peluche.</p>
