--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Oriteddy by Orinoco est une boutique en ligne de vente d'ours en peluche fait main.">
+    <meta name="description" content="OrinoCam by Orinoco - Site de vente de caméra vintage unique et customizable">
     <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow">
+	  <meta property="og:title" content="OrinoCam by Orinoco - Site de vente de caméra vintage unique et customizable">
+    <meta property="og:url" content="https://andygarcia06.github.io/ORINOCAM-by-Orinoco/.">
+    <meta property="og:description" content="OrinoCam by Orinoco - Site de vente de caméra vintage unique et customizable">
+    <meta property="og:image" content="img/orinoco-favicon.jpg" />
 
     <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="default.css" rel="stylesheet">
-    <title>Oriteddy by Onrico - Vente en ligne d'ours en peluche fait à la main</title>
+    <title>"OrinoCam by Orinoco - Site de vente de caméra vintage unique et customizable"</title>
+    <link rel="shortcut icon" type="image/jpg" href="img/orinoco-favicon.jpg"/>
     
 </head>
 <body class="bg-primary container">
