--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="default.css" rel="stylesheet">
-    <title>"OrinoCam by Orinoco - Site de vente de caméra vintage unique et customizable"</title>
+    <title>OrinoCam by Orinoco - Site de vente de caméra vintage unique et customizable</title>
     <link rel="shortcut icon" type="image/jpg" href="img/orinoco-favicon.jpg"/>
     
 </head>
