modification du texte caroussel

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
           <div class="carousel-item active">
             <img src="img/image-caroussel-1.jpg" alt="image d'un ours en peluche" class="d-block w-100" />
             <div class="carousel-caption">
-              <h5>Un large choix d'ours en peluche</h5>
-              <p>Vous pourrez trouver absolutment tout type d'ours en peluche, pour les collectionneurs ou les enfants</p>
+              <h5>Un large choix de caméras vintages</h5>
+              <p>Vous pourrez trouver absolutment tout type de caméras, pour les collectionneurs, les professionnels ou les particuliers</p>
             </div>
           </div>
           
           <div class="carousel-item">
             <img src="img/image-caroussel-2.jpg" alt="image d'un ours en peluche" class="d-block w-100" />
             <div class="carousel-caption">
-                <h5>Des ours en peluche modifiables</h5>
-                <p>Du choix de couleur ou de matière, nous offrons de nombreuses options et variantes de nos ours en peluche</p>
+                <h5>Des caméras entierement customizables</h5>
+                <p>Du choix de lentilles ou de focales, nous offrons de nombreuses options et variantes vous permettant d'optenir un appreil unique et adapté à vos besoins</p>
               </div>
             </div>
 
@@ -84,7 +84,7 @@
             <img src="img/image-caroussel-3.jpg" alt="image d'un ours en peluche " class="d-block w-100" />
             <div class="carousel-caption">
                 <h5>Des services à votre écoute</h5>
-                <p>Nous équipes de professionnel seront aptent à vous conseiller sur vos choix d'ours en peluche.</p>
+                <p>Nous équipes de professionnel seront aptent à vous conseiller sur vos choix de caméras vintages en fonction de votre utilisation.</p>
               </div>
             </div>
           </div>
