correction  de serverOut

--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
 
       <!--Première section titre -->
     <section class="container" id="first_section">
-      <figure id="fond-photo-ourson">
-      </figure>
 
         <div class="container font-weight-light">
+          <h1 id="my_title">OrinoCam<span>by Orinoco</span></h1>
+          <h2 id="my_second_title">n°1 des sites de ventes de camera vintages entièrement customizables.</h2>
+      </section>
         </div>
     </section>
    
