--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <!--Première section titre -->
     <section class="container" id="first_section">
 
-        <div class="container font-weight-light d-block m-auto py-3">
-          <h2 id="my_title" class="text-secondary text-center">OrinoCam<span class="text-btn-color"> by Orinoco</span></h1>
+        <div class="container d-block text-center mt-5 pt-5">
+          <h2 id="my_title" class="text-secondary text-center font-weight-bold">OrinoCam<span class="text-btn-color"> by Orinoco</span></h1>
           <h3 id="my_second_title" class="text-secondary text-center">N°1 des sites de ventes de camera vintages entièrement customizables.</h2>
       </section>
         </div>
